MComix 0.94

    - Fixed MComix opening archives in sibling directories
      even when "Automatically open next archive" was disabled.

    - Fixed recursively adding directories to the library not working
      consistently on Win32.

    - The library window has been slighly reorganized. All collection-related
      functionality can now be accessed via the right-click popup on the
      collection panel to the left. Similiarily, "Add books" is now on the
      main book panel popup. Additionally, CTRL-A has been set as shortcut
      for this action.

    - The magnifying lens can no longer become partially invisible when moving
      around near window edges, and should no longer flicker.

    - MComix automatically switching to next/previous directories can now
      be controlled with a new preference option.

    - Updated French translation. (by Frédéric Chateaux)

MComix 0.93
Release date: 27.08.2011

    - Removing a book from the library while its thumbnail wasn't loaded yet
      would result in a segmentation fault. This issue has been fixed.

    - Fixed sorting in the bookmark edit dialog not working as expected. The
      buttons "Sort ascending" and "Sort descending" have been removed, as
      they did the same as clicking on the "Name" header of the bookmarks
      table. Double-clicking a bookmark will open it.

    - Fixed a bug that made it impossible to show toolbar/menu controls in
      fullscreen mode if "Automatically hide all toolbars in fullscreen" was
      enabled.

    - Fixed exception related to calculation of dynamic background colors.
      (by Nephiel)

    - Library collection names did not accept non-ASCII characters. This has
      been fixed.

    - Added support for LHA/LZH archives, using either 'lha' or '7z' as
      extractors. Please not that the '7z' executable on Windows does not
      support printing Unicode characters at all, so extracting an archive with
      non-ASCII filenames will always fail.
